# ohjelmistotekniikka

./: .gitignore  README.md
dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  maarittelydokumentti.md  testaus.md  tuntikirjanpito.md
havikkisovellus/: .coveragerc  .env  .env.test  .pylintrc  pyproject.toml  tasks.py
havikkisovellus/src/: config.py  database.py  database_connect.py  index.py  initialize_database.py
havikkisovellus/src/database/: database.py  database_connect.py  initialize_database.py
havikkisovellus/src/entities/: ingredient.py  user.py
havikkisovellus/src/logic/: food_service.py
havikkisovellus/src/tests/: database_test.py  foodservice_test.py  ingredient_test.py
havikkisovellus/src/ui/: ui.py
havikkisovellus/src/ui_visual/: after_login_view.py  create_user_view.py  ingredients_view.py  login_view.py  ui.py  ui_frame.py
laskarit/viikko1/: eka.txt  gitlog.txt  kolmas.txt  komentorivi.txt  tiedosto.txt  toinen.txt
laskarit/viikko2/maksukortti/: pyproject.toml  tasks.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
