[tool.poetry]
name = "havikkisovellus"
version = "0.1.0"
description = ""
authors = ["Julia <juliapoutanen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
invoke = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
coverage = "^5.5"
pylint = "^2.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
